# text_normalize

./: README.md  checkif_.py  pyproject.toml
OCR/: ocr_normalizer.py
tests/: test_normalizer.py
text_normalizer/: normalizer.py
