[tool.poetry]
name = "text_normalizer"
version = "0.1.0"
description = "A Python package for text normalization."
authors = ["Fooxy"]

packages = [
    {include = "text_normalizer"}]
[tool.poetry.dependencies]
python = "^3.10.9"
unidecode = "^1.3.8"
pytest = "^7.4.4"
PILLOW = "^10.2.0"
pytesseract = "^0.3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
